ffi/derive/tests/ui_fail/non_robust_repr_c.stderr
error[E0277]: the trait bound `bool: ReprC` is not satisfied
 --> tests/ui_fail/non_robust_repr_c.rs:4:38
  |
4 | #[derive(Clone, Copy, PartialEq, Eq, FfiType)]
  |                                      ^^^^^^^ the trait `ReprC` is not implemented for `bool`
  |
  = help: the following other types implement trait `ReprC`:
            i8
            i16
            i32
            i64
            u8
            u16
            u32
            u64
          and $N others
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  = note: this error originates in the derive macro `FfiType` (in Nightly builds, run with -Z macro-backtrace for more info)
